# pipelines

./: Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: docker-run.yml
db/: Dockerfile
example_pipeline/: pipeline.py
pipelines/: cli.py  database.py  load.py  tasks.py
test/: test_pipelines.py
