[tool.poetry]
name = "pipelines"
version = "0.1.0"
description = ""
authors = ["Ksenya <snegurka64@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
pathlib = "^1.0.1"
psycopg2 = "^2.9.5"
python-dotenv = "^1.0.0"


[tool.poetry.scripts]
pipelines = 'pipelines.cli:cli'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
